# LinTx

./: Cargo.toml  build.rs  gamepad.sh  start.sh  steamdeck.sh
.cargo/: config.toml
src/: adc.rs  calibrate.rs  elrs_tx.rs  gampad.rs  joy_dev.rs  joysticks_test.rs  main.rs  mixer.rs  msgbus.rs
