[package]
name = "LinTx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpos = { path = "./rpos" }
ads1x1x = { git = "https://github.com/eldruin/ads1x1x-rs.git" }
embedded-hal = "1.0.0"
linux-embedded-hal = "0.4.0"
nb = "1"
clap = { version = "4.4.18", features = ["derive"] }
